fix: align status indicator table to grid

--- a/src/components/StatusIndicatorTable/StatusIndicator.module.scss
+++ b/src/components/StatusIndicatorTable/StatusIndicator.module.scss
@@ -9,7 +9,7 @@
   width: 100%;
 
   @include carbon--breakpoint('lg') {
-    width: 80px;
+    width: 50%;
   }
 }
 
